--- a/Project/Checking_Work_File.xaml
+++ b/Project/Checking_Work_File.xaml
@@ -82,7 +82,6 @@
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart sap2010:Annotation.AnnotationText="This module evaluates the presence or absence of an Work  file (in the Processing work folder and Incoming work folder), and returns a decision based on the underlisted possible scenarios...&#xA;" DisplayName="Input_File_Checkpoint" sap:VirtualizedContainerService.HintSize="844,708" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -262,7 +261,7 @@
               <av:PointCollection x:Key="ConnectorLocation">330,148.5 360,148.5 360,50 420,50</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Checking For Downloaded File" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_5">
+          <Sequence DisplayName="Checking For Downloaded File" sap:VirtualizedContainerService.HintSize="526,981" sap2010:WorkflowViewState.IdRef="Sequence_5">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:Boolean" Name="TrackerExist" />
             </Sequence.Variables>
@@ -320,7 +319,7 @@
                   </ui:ReadCell>
                   <ui:ReadCell Cell="B2" DisplayName="Read Cell Email Sent" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="ReadCell_2" SheetName="Tracker Sheet" WorkbookPath="[TrackerPath]">
                     <ui:ReadCell.Result>
-                      <OutArgument x:TypeArguments="x:String">[EmailCell]</OutArgument>
+                      <OutArgument x:TypeArguments="x:String">[EmailRecivedCell]</OutArgument>
                     </ui:ReadCell.Result>
                   </ui:ReadCell>
                   <ui:ReadCell Cell="C2" DisplayName="Read Cell Email Recived" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="ReadCell_4" SheetName="Tracker Sheet" WorkbookPath="[TrackerPath]">
